--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>3d example using three.js and multiple windows</title>
 	<script type="text/javascript" src="three.r124.min.js"></script>
