--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>3d example using three.js and multiple windows</title>
-	<script type="text/javascript" src="three.r124.min.js"></script>
-	<style type="text/css">
-		
-		*
-		{
-			margin: 0;
-			padding: 0;
-		}
+  <head>
+    <title>3d example using three.js and multiple windows</title>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@your_twitter_handle" />
+    <meta name="twitter:title" content="Multi-Window 3D" />
+    <meta
+      name="twitter:description"
+      content="System developed by Bjorn Staal using local storage and the getScreenDetails() API to communicate between two windows rendering webGL 3D canvas."
+    />
+    <meta
+      name="twitter:image"
+      content="https://cdn.glitch.global/d92d65fc-88c4-4b07-a275-7efa69b16ace/multi.png?v=1700821996612"
+    />
 
-	</style>
-</head>
-<body>
-	
-	<script type="module" src="main.js"></script>
-</body>
+    <meta property="og:title" content="Multi-Window 3D" />
+    <meta
+      property="og:description"
+      content="System developed by Bjorn Staal using local storage and the getScreenDetails() API to communicate between two windows rendering webGL 3D canvas."
+    />
+    <meta
+      property="og:image"
+      content="https://cdn.glitch.global/d92d65fc-88c4-4b07-a275-7efa69b16ace/multi.png?v=1700821996612"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+
+    <script type="text/javascript" src="three.r124.min.js"></script>
+    <style type="text/css">
+      * {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
