add regular meta description tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>3D example using Three.js and multiple windows</title>
+    
+    <meta name="description" content="System developed by Bjorn Staal using local storage and the getScreenDetails() API to communicate between two windows rendering webGL 3D canvas." />
 
     <meta property="og:title" content="Multi-Window 3D" />
     <meta
