rm irrelevant twitter card tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
   <head>
     <title>3D example using Three.js and multiple windows</title>
-    
-    <meta name="description" content="System developed by Bjorn Staal using local storage and the getScreenDetails() API to communicate between two windows rendering webGL 3D canvas." />
+
+    <meta
+      name="description"
+      content="System developed by Bjorn Staal using local storage and the getScreenDetails() API to communicate between two windows rendering webGL 3D canvas."
+    />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Multi-Window 3D" />
+    <meta
+      name="twitter:description"
+      content="System developed by Bjorn Staal using local storage and the getScreenDetails() API to communicate between two windows rendering webGL 3D canvas."
+    />
+    <meta
+      name="twitter:image"
+      content="https://cdn.glitch.global/d92d65fc-88c4-4b07-a275-7efa69b16ace/multi.png?v=1700821996612"
+    />
 
     <meta property="og:title" content="Multi-Window 3D" />
     <meta
